--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase": "^10.6.0",
     "flowbite": "^2.2.1",
     "flowbite-react": "^0.7.2",
+    "nanoid": "^5.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
